# quanteo

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  PROJECT_INDEX.md  README.md  docker-compose.yml  kis_devlp.yaml.example  pyproject.toml  quanteo.yaml.example
.impeccable/: design.json
claudedocs/: workflow_quanteo_2026-06-18.md
core/: app.py  market_collector.py
core/adapters/: base.py  models.py  throttler.py
core/api/: app.py  deps.py  models.py
core/backtest/: engine.py  metrics.py  toss_data_source.py  walk_forward.py
core/config/: __init__.py  settings.py
core/events/: __init__.py  bus.py  types.py
core/execution/: __init__.py  executor.py  order_history_sync.py  order_sync.py  position_sync.py
core/marketdata/: __init__.py  feed.py  feed_kis.py  index_quotes.py  models.py  normalizer.py
core/notifier/: __init__.py  base.py  factory.py  mock.py  telegram.py  templates.py  wiring.py
core/risk/: __init__.py  manager.py  models.py
core/store/: __init__.py  db.py  schema.py
core/strategy/: base.py  engine.py  harness.py  multi_timeframe.py  timeframe_judge.py
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
docs/setup/: GOOGLE_CALENDAR_SETUP.md
info/: main.py  scheduler.py
info/ai_filter/: claude_filter.py
info/calendar/: earnings_data.py  google_cal.py  macro_events.py
info/fx/: daily_report.py  rate_monitor.py  rate_rule.py
info/news/: dart_collector.py  finnhub_collector.py  rss_collector.py
info/telegram/: info_notifier.py
screener/: __init__.py  main.py
screener/agents/: analyst_agent.py
screener/config/: settings.yaml
screener/notify/: callback_handler.py  telegram_reporter.py
screener/pipeline/: bbc_timing.py  ranker.py  scorer.py  screener.py
screener/scheduler/: daily_job.py
screener/scripts/: verify_screener.py
scripts/: restart_server.sh  send_balance.py
specs/: 2026-06-18-estimation.md  2026-06-18-quanteo-architecture.md  DESIGN.md  info-alarm.md  stock-detail-chart-page.md  stock-miner.md  tasks.md  trade.md  trading-strategy.md
tests/: conftest.py  test_app_shutdown.py  test_prod_gate.py
(+170 files in other folders)
