[project]
name = "quanteo"
version = "0.1.0"
description = "KIS Open Trading API 기반 주식 자동매매 봇"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "duckdb>=1.0",
    "aiogram>=3.9",
    # Phase 10 — 정보 수집·알람 서브시스템
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "OpenDartReader>=0.2",
    "yfinance>=0.2",
    "pandas>=2.2",
    "anthropic>=0.29",
    "gcsa>=2.2",
    "google-auth-oauthlib>=1.2",
    "icalendar>=5.0",
    "pytz>=2024.1",
    "apscheduler>=3.10",
    # Phase 16 — 일일 종목 추천 시스템 (Stock Miner)
    "pykrx>=1.0",
    "pyarrow>=17.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "info", "screener"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
